--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -1,4 +1,4 @@
-input,textarea, select{
+input, textarea, select{
   appearance: none;
   width: 100%;
   border-radius: 8px;
@@ -26,5 +26,71 @@ label{
 input:focus, textarea:focus, select:focus{
   border: 2px solid var(--stroke-highlight);
   outline: 4px solid var(--surface-secondary);
+}
+input[type="date"]{
+  position: relative;
+  &::-webkit-calendar-picker-indicator{
+    opacity: 0;
+  }
+  &::before{
+    content: "";
+    position: absolute;
+    background: url(../../assets/icons/calendar-03.svg)center/contain;
+    right: 1rem;
+    width: 24px;
+    height: 24px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+select{
+  background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
+}
+.dropzone{
+  position: relative;
+
+  display: flex;
+  height: 160px;
+  padding: 24px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+
+  border-radius: 8px;
+  border: 1px dashed var(--stroke-default);
+  background: var(--surface-primary);
+
+  & input{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    opacity: 0;
+  }
+  p{
+    color: #A8A29E;
+    text-align: center;
+    font: var(--text-md);
+  }
+  &:hover{
+    display: flex;
+    height: 160px;
+    padding: 24px 16px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+
+    border-radius: 8px;
+    border: 2px dashed var(--stroke-highlight);
+    background: var(--surface-secondary);
+
+    & svg path{
+      stroke: var(--stroke-highlight);
+    }
+  }
 
 }
