--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -23,10 +23,13 @@ label{
   display: block;
   margin-bottom: .25rem;
 }
-input:focus, textarea:focus, select:focus{
+
+input:focus, textarea:focus, select:focus, input[type="date"]:focus-within {
   border: 2px solid var(--stroke-highlight);
   outline: 4px solid var(--surface-secondary);
+  outline-offset: .1px;
 }
+
 input[type="date"]{
   position: relative;
   &::-webkit-calendar-picker-indicator{
@@ -74,7 +77,7 @@ select{
     text-align: center;
     font: var(--text-md);
   }
-  &:hover{
+  &:hover, &:has(input:focus){
     display: flex;
     height: 160px;
     padding: 24px 16px;
@@ -92,5 +95,17 @@ select{
       stroke: var(--stroke-highlight);
     }
   }
-
+}
+.address .flex{
+  gap: 20px;
+}
+input-wrapper:has([disabled]){
+  opacity: .5;
+}
+input{
+  &[disabled]{
+    background-color: var(--surface-disabled);
+    border: 1px solid var(--stroke-default);
+    color: var(--text-primary);
+  }
 }
