--- a/styles/global.css
+++ b/styles/global.css
@@ -70,3 +70,16 @@ p{
 body{
   overflow: hidden;
 }
+img{
+  max-width: 100%;
+  height: auto;
+}
+.flex{
+  display: flex;
+}
+.flex-1{
+  flex: 1;
+}
+.flex-2{
+  flex: 2;
+}
