--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -106,6 +106,78 @@ input{
   &[disabled]{
     background-color: var(--surface-disabled);
     border: 1px solid var(--stroke-default);
-    color: var(--text-primary);
+    color: var(--text-secondary);
+  }
+  &:invalid{
+    border: 2px solid var(--semantic-error);
+  }
+  & + small{
+    font: var(--text-sm);
+    color: #78716c;
+    display: inline-block;
+    margin-top: 4px;
+  }
+  &[required] + .error{
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+    gap: 4px;
+    font: var(--text-sm);
+    color: var(--semantic-error);
+    margin-top: 4px;
+  }
+  &:not(:focus):valid + .error{
+    display: none;
+  }
+}
+label + .radio-wrapper{
+  margin-top: 24px;
+}
+.radio-wrapper{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(7.5rem, 1fr));
+  gap:8px;
+}
+
+.radio-inner{
+  position: relative;
+  display: flex;
+  padding: 32px 16px 16px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  border: 1px solid var(--stroke-default);
+  background: var(--surface-primary);
+
+  .radio-image {
+    background-image: url(../../assets/icons/circle.svg);
+    
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 8px;
+    left: 8px;
+  }
+
+  & input,
+  & input:focus,
+  & input:hover{
+    all:unset;
+  }
+  &:hover, &:focus, &:has(input:focus){
+      border-radius: 8px;
+      border: 2px solid var(--stroke-highlight);
+      background: var(--surface-primary);
+      & .radio-image{
+        background-image: url(../../assets/icons/circle-02.svg);
+      }
+    }
+  &:has(:checked){
+    border: 2px solid var(--stroke-highlight);
+      
+    & .radio-image{
+        background-image: url(../../assets/icons/checkmark-circle-01.svg);
+    }
   }
 }
