--- a/styles/global.css
+++ b/styles/global.css
@@ -29,10 +29,40 @@
   --pink: #F682A5;
   
   --font-family: 'Poppins', sans-serif;
+
   --text-md: 400 16px/150% var(--font-family);
   --text-sm: 400 14px/140% var(--font-family);
-  
+  --fw-base: 400;
+
+  --py-base: 16px;
+  --py-lg: 24px;
+  --px-base: 16px;
+  --px-lg: 24px;
+
+  --row-gap: 20px;
+  --margin-top: 16px;
 }
+html{
+  font-family:var(--font-family) ;
+  font-weight: var(--fw-base);
+  line-height: 140%;
+
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+@media (width>= 60em) {
+  :root{
+    --py-base: 16px;
+    --py-lg: 64px;
+    --px-base: 16px;
+    --px-lg: 64px;
+
+    --row-gap: 24px;
+    --margin-top: 16px;
+  }
+}
+
 .text-md{
   font: var(--text-md);
   color: var(--text-secondary);
