--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -197,10 +197,15 @@ label + .radio-wrapper{
 .actions-wrapper{
   margin-top: 48px;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   gap: 16px;
-  align-self: stretch;
+}
+@media (max-width: 60em) {
+    .actions-wrapper {
+        text-align: center;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .checkbox-wrapper{
