--- a/styles/global.css
+++ b/styles/global.css
@@ -51,15 +51,9 @@ html{
   scroll-behavior: smooth;
 }
 
-@media (width>= 60em) {
-  :root{
-    --py-base: 16px;
-    --py-lg: 64px;
-    --px-base: 16px;
-    --px-lg: 64px;
-
-    --row-gap: 24px;
-    --margin-top: 16px;
+@media (width>= 60em){
+  body{
+    overflow: auto;
   }
 }
 
@@ -133,4 +127,16 @@ img{
   flex-direction: column;
   align-items: flex-start;
   flex: 1 0 0;
+}
+@media(max-width:60em){
+  .flex{
+    display: flex;
+    flex-direction: column;
+  }
+  .flex-1, .flex-2{
+    width: 100%;
+  }
+  .btn-primary, .btn-secondary{
+    width: 100%;
+  }
 }
