--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,71 +1,35 @@
-@media (width>= 60em){
-  #app{
-    display: grid;
-    grid-template-columns: 51.28% 48.75%;
-    grid-template-areas: "main aside";
-    height: 100vh;
-    overflow: hidden;
-   
-    aside {
-      order: 2;
-      width: 100%;
-      flex: none;
-      .aside-container{
-        --align: flex-start;
-        
-        & #illustration{
-          width: 496px;
-        }
-        margin-right: auto;
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        align-items: flex-start;
-      }
-    }
-  }
-  
-}
 #app{
   display: grid;
   grid-template-columns: 51.28% 48.75%;
-  grid-template-areas: "main aside";
   height: 100vh;
   overflow: hidden;
-
-  aside {
-    background-color: var(--surface-secondary);
-    padding: var(--py-lg);
-
-    & .aside-container{
-      & img{
-        width: 203px;
-      }
-      & #illustration {
-        width: 312px;
-      }
-      
-      --align: center;
-      margin-inline: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 8px;
-    }
-  }
 }
-
-#main{
-  margin-top: var(--py-lg);
-  margin-bottom: var(--py-lg);
-  row-gap: var(--row-gap);
-  column-gap: var(--column-gap);
-}
-
 main{
   overflow: auto;
-}
+  padding: 4rem;
 
+  & .main-container{
+    max-width: 33rem;
+    margin-left: auto;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+}
+aside{
+  background-color: var(--surface-secondary);
+  padding: 4rem;
+
+  & .aside-container{
+    max-width: 31rem;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+  }
+}
 .back{
   display: flex;
   align-items: flex-start;
@@ -79,8 +43,38 @@ main{
   flex-direction: column;
   gap: 24px;
 }
-.flex-header{
+#description{
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+@media (max-width: 60em){
+  #app{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding: 0;
+
+    & .main-container{
+      margin-left: 0;
+      align-items: center;
+    }
+    & aside{
+      max-width: none;
+      text-align: center;
+      justify-content: center;
+      
+      order: -1;
+
+      & .aside-container{
+        margin-right: 0;
+        justify-content: center;
+        align-items: center;
+        & h1, p{
+          display: none;
+        }
+      }
+    }
+  }
 }
